[package]
name = "photo-dna"
version = "0.1.0"
edition.workspace = true
author.workspace = true
license.workspace = true
description = "Pure Rust implementation of PhotoDNA perceptual hashing for image similarity detection"
keywords = ["image", "hashing", "perceptual", "similarity", "photodna"]
repository.workspace = true
rust-version.workspace = true

[dependencies]
image = "0.25.10"
thiserror = "2.0.18"
base64 = {version="0.22.1", optional=true}
serde = {version="1.0.228", features=["derive"],optional=true}

[dev-dependencies]
criterion = "0.4"
serde_json = "1.0.149"


[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "hash_bench"
harness = false
