[package]
name = "photo-dna-rs"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
# Python package, doesn't need to be published on crates.io
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "photo_dna_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
photo-dna = {path="../photo-dna"}
